test/classes/initializers/error-initializer-return-type.good
error-initializer-return-type.chpl:7: error: initializers cannot declare a return type
