test/classes/initializers/error-initializer-return-type.chpl



class C {
}

proc C.init() : C {

}
